; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/install/extr_install.c_main.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/install/extr_install.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [60 x i8] c"syntax: install x: [fs_type]\0Awhere fs_type is fat or fat32\0A\00", align 1
@.str.1 = private unnamed_addr constant [52 x i8] c"You must now copy freeldr.sys & freeldr.ini to %s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 3
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = call i32 @_T(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 (i32, ...) @_tprintf(i32 %9)
  store i32 -1, i32* %3, align 4
  br label %33

11:                                               ; preds = %2
  %12 = load i8**, i8*** %5, align 8
  %13 = getelementptr inbounds i8*, i8** %12, i64 1
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @OpenVolume(i8* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %11
  store i32 -1, i32* %3, align 4
  br label %33

18:                                               ; preds = %11
  %19 = load i8**, i8*** %5, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 1
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @BackupBootSector(i8* %21)
  %23 = load i8**, i8*** %5, align 8
  %24 = getelementptr inbounds i8*, i8** %23, i64 2
  %25 = load i8*, i8** %24, align 8
  %26 = call i32 @InstallBootSector(i8* %25)
  %27 = call i32 @_T(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0))
  %28 = load i8**, i8*** %5, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 1
  %30 = load i8*, i8** %29, align 8
  %31 = call i32 (i32, ...) @_tprintf(i32 %27, i8* %30)
  %32 = call i32 (...) @CloseVolume()
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %18, %17, %8
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @_tprintf(i32, ...) #1

declare dso_local i32 @_T(i8*) #1

declare dso_local i32 @OpenVolume(i8*) #1

declare dso_local i32 @BackupBootSector(i8*) #1

declare dso_local i32 @InstallBootSector(i8*) #1

declare dso_local i32 @CloseVolume(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
